--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="mytext">
           <img src="img/saya.JPG" class="img-circle">
           <h1>Wahyu Kurniawan</h1>
-          <p>Php Programmer</p>
+          <h4>Web Developer | Gamer | Traveler</h4>
         </div>
       </div>
       </center> 
@@ -66,8 +66,8 @@
             <div>CSS</div><br>
             <div>Javascript</div><br>
             <div>PHP</div><br>
-            <div>Codeigniter</div><br>
             <div>Laravel</div><br>
+            <div>Codeigniter</div><br>
           </div>
           <div class="col-md-10">
             <div class="progress">
@@ -87,11 +87,11 @@
               </div>
             </div>
             <div class="progress">
-              <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+              <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
               </div>
             </div>
             <div class="progress">
-              <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+              <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
               </div>
             </div>
             
@@ -113,18 +113,18 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/1.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/2.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/3.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/4.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/5.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/6.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/7.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/8.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/9.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/10.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/11.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/portfolio/12.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/1.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/2.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/3.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/4.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/5.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/6.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/7.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/8.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/9.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/10.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/11.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/12.PNG"></a></div>
       </div>
     </div>
   </section>
