--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/1.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/2.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/3.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/4.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/5.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/6.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/7.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/8.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/9.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/10.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/11.PNG"></a></div>
-        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/12.PNG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/1.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/2.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/3.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/4.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/5.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/6.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/7.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/8.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/9.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/10.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/11.JPG"></a></div>
+        <div class="col-md-4"><a href="" class="thumbnail"><img src="img/12.JPG"></a></div>
       </div>
     </div>
   </section>
