--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
     <![endif]-->
   </head>
   <body>
-      <div id="particles-js">
-      <center>
-        <div class="mytext">
-          <img src="img/saya.JPG" class="img-circle">
-          <h1>Wahyu Kurniawan</h1>
-          <h4>Web Developer | Gamer | Traveler</h4>
+    <div class="container-fluid">
+      <div class="row">
+        <div id="particles-js">
+          <div class="col-md-12 text-center mytext">
+              <img src="img/saya.JPG" class="img-circle">
+              <h1>Wahyu Kurniawan</h1>
+              <h4>Web Developer | Gamer | Traveler</h4>
+            </div>
+          </div>
         </div>
       </div>
-      </center> 
+    </div>
   </body>
   
   <!-- about -->
