--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="col-md-5">
           <table class="table">
             <tr>
-              <th width="30%">HTML</th>
+              <th width="30%"><i class="fa fa-html5"></i> HTML</th>
               <th>
                 <div class="progress">
                   <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
@@ -64,7 +64,7 @@
               </th>
             </tr>
             <tr>
-              <th width="30%">CSS</th>
+              <th width="30%"><i class="fa fa-css3"></i> CSS</th>
               <th>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
@@ -73,16 +73,7 @@
               </th>
             </tr>
             <tr>
-              <th width="30%">Javascript</th>
-              <th>
-                <div class="progress">
-              <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-              </div>
-            </div>
-          </th>
-            </tr>
-            <tr>
-              <th width="30%">PHP</th>
+              <th width="30%"><i class="fa fa-pied-piper"></i> PHP</th>
               <th>
                 <div class="progress">
                   <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
@@ -91,19 +82,28 @@
               </th>
             </tr>
             <tr>
-              <th width="30%">Laravel</th>
+              <th width="30%"><i class="fa fa-slack"></i> Laravel</th>
               <th>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  <div class="progress-bar progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
                   </div>
                 </div>
               </th>
             </tr>
             <tr>
-              <th width="30%">Codeigniter</th>
+              <th width="30%"><i class="fa fa-database"></i> Mysql</th>
               <th>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+                  <div class="progress-bar progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  </div>
+                </div>
+              </th>
+            </tr>
+            <tr>
+              <th width="30%"><i class="fa fa-codepen"></i> Javascript</th>
+              <th>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
                   </div>
                 </div>
               </th>
