--- a/index.html
+++ b/index.html
@@ -43,16 +43,84 @@
       </div>
       <div class="row">
 
-        <div class="col-md-5  col-md-offset-1">
-            <div class="row">
-              <p class="alert alert-success"><i class="fa fa-birthday-cake"></i> 22 Tahun</p>
-              <p class="alert alert-success"><i class="fa fa-building"></i> Web Developer - PT Java Sarigandum</p>
-              <p class="alert alert-success"><i class="fa fa-map-marker"></i> Mojokerto</p>
-              <p class="alert alert-success"><i class="fa fa-mortar-board"></i> Teknik Informatika</p>
+        <div class="col-md-6">
+            <div class="title">
+              <h4><i class="fa fa-laptop"></i> Work Experience</h4>
+              <ul>
+                <table class="table">
+                  <tr>
+                    <td>
+                      <li>June 2017 - Now</li>
+                    </td>
+                    <td>
+                      Web Developer - PT Java Sarigandum
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <li>Sept 2013 - June 2017</li>
+                    </td>
+                    <td>
+                      IT Staff - PT Anugrah Karya Sahabat Sejati
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <li>June 2013 - Sept 2013</li>
+                    </td>
+                    <td>
+                      Computer Technician - DM Komputer
+                    </td>
+                  </tr>
+                </table>
+              </ul>
+            </div>
+            <br>
+            <div class="title">
+              <h4><i class="fa fa-mortar-board"></i> Education</h4>
+              <ul>
+                <table class="table">
+                  <tr>
+                    <td>
+                      <li>2013 - 2017</li>
+                    </td>
+                    <td>
+                      Universitas 17 Agustus 1945 Surabaya - Teknik Informatik
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <li>2010 - 2013</li>
+                    </td>
+                    <td>
+                      SMK Negeri 1 Dlanggu - Rekayasa Perangkat Lunak
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <li>2007 - 2010</li>
+                    </td>
+                    <td>
+                      SMP Negeri 1 Gondang
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <li>2001 - 2007</li>
+                    </td>
+                    <td>
+                      SD Negeri 1 Pohjejer
+                    </td>
+                  </tr>
+                </table>
+              </ul>
             </div>
         </div>
         
-        <div class="col-md-5">
+        <div class="col-md-6">
+          <div class="title">
+            <h4><i class="fa fa-code"></i> Skill</h4>
+          </div>
           <table class="table">
             <tr>
               <th width="40%"><i class="fa fa-html5"></i> HTML</th>
