--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                 <table class="table">
                   <tr>
                     <td>
-                      <li>June 2017 - Now</li>
+                      <li>Desember 2017 - Now</li>
+                    </td>
+                    <td>
+                      API Developer - SMART IT INDONESIA
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <li>June 2017 - November 2017</li>
                     </td>
                     <td>
                       Web Developer - PT Java Sarigandum
@@ -85,7 +93,7 @@
                       <li>2013 - 2017</li>
                     </td>
                     <td>
-                      Universitas 17 Agustus 1945 Surabaya - Teknik Informatik
+                      Universitas 17 Agustus 1945 Surabaya - Teknik Informatika
                     </td>
                   </tr>
                   <tr>
@@ -135,7 +143,7 @@
               <th width="40%"><i class="fa fa-css3"></i> CSS</th>
               <th>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                   </div>
                 </div>
               </th>
@@ -153,7 +161,7 @@
               <th width="40%"><i class="fa fa-slack"></i> Laravel</th>
               <th>
                 <div class="progress">
-                  <div class="progress-bar progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                   </div>
                 </div>
               </th>
@@ -162,7 +170,7 @@
               <th width="40%"><i class="fa fa-database"></i> Mysql</th>
               <th>
                 <div class="progress">
-                  <div class="progress-bar progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
                   </div>
                 </div>
               </th>
