Update dinamic year
You can add that code to separated js file

--- a/index.html
+++ b/index.html
@@ -223,7 +223,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p>&copy copyright 2017 | by Wahyu Kurniawan <br>
+          <p  id="year">&copy copyright     
+				<script>
+					n =  new Date();
+					y = n.getFullYear();
+					document.write(y);
+				</script>| by Wahyu Kurniawan <br>
             <i class="glyphicon glyphicon-phone"></i> 0856 0851 3115  <br>
           <i class="glyphicon glyphicon-envelope"> wahyugalaxy13@gmail.com </i></p>
         </div>
