--- a/index.html
+++ b/index.html
@@ -104,22 +104,6 @@
                       SMK Negeri 1 Dlanggu - Rekayasa Perangkat Lunak
                     </td>
                   </tr>
-                  <tr>
-                    <td>
-                      <li>2007 - 2010</li>
-                    </td>
-                    <td>
-                      SMP Negeri 1 Gondang
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <li>2001 - 2007</li>
-                    </td>
-                    <td>
-                      SD Negeri 1 Pohjejer
-                    </td>
-                  </tr>
                 </table>
               </ul>
             </div>
@@ -131,58 +115,24 @@
           </div>
           <table class="table">
             <tr>
-              <th width="40%"><i class="fa fa-html5"></i> HTML</th>
-              <th>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                  </div>
-                </div>
-              </th>
+              <th width="50%"><i class="fa fa-html5"></i> HTML</th>
+              <th width="50%"><i class="fa fa-css3"></i> CSS</th>
             </tr>
             <tr>
-              <th width="40%"><i class="fa fa-css3"></i> CSS</th>
-              <th>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                  </div>
-                </div>
-              </th>
+              <th width="50%"><i class="fa fa-docker"></i> Docker</th>
+              <th width="50%"><i class="fa fa-rabbit"></i> Rabbit</th>
             </tr>
             <tr>
-              <th width="40%"><i class="fa fa-pied-piper"></i> PHP</th>
-              <th>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                  </div>
-                </div>
-              </th>
+              <th width="50%"><i class="fa fa-pied-piper"></i> PHP</th>
             </tr>
             <tr>
-              <th width="40%"><i class="fa fa-slack"></i> Laravel</th>
-              <th>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                  </div>
-                </div>
-              </th>
+              <th width="50%"><i class="fa fa-slack"></i> Laravel</th>
             </tr>
             <tr>
-              <th width="40%"><i class="fa fa-database"></i> Mysql</th>
-              <th>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                  </div>
-                </div>
-              </th>
+              <th width="50%"><i class="fa fa-database"></i> Mysql</th>
             </tr>
             <tr>
-              <th width="40%"><i class="fa fa-codepen"></i> Javascript</th>
-              <th>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-                  </div>
-                </div>
-              </th>
+              <th width="50%"><i class="fa fa-codepen"></i> Javascript</th>
             </tr>
           </table>
         </div>
